modify the design

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,12 +23,12 @@
 */
 .yellow{
 	background: linear-gradient(to right, #BFC4C7 , #CFD4D7);
-	border-radius: 35px;
+	
 }
 
 
 .bottem{
-	border-radius: 35px;
+	
 	background-color: #30aadc;
 	height: 150px;
 	text-align: center;
@@ -38,9 +38,9 @@
 
 .navbar-default{
 	background-color: #30aadc;
-	border-radius: 35px;
+	
 	padding:10px;
-    border-color: #d65c14;
+    
 }
 
 .welcome{
@@ -97,11 +97,11 @@
     border-bottom-color: #8a0e0b;
 }
 .navbar-default .navbar-toggle {
-    border-color: #d65c14;
+    
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #d65c14;
+    background-color: #2183ab;
 }
 .navbar-default .navbar-toggle .icon-bar {
     background-color: #ffffff;
